updated with animations and scalability

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <nav>
         <div class="personal__logo">David Greenberg</div>
         <ul class="nav__link--list">
-          <li>
+          <li class = "nav__link">
             <a
               href=""
               class="nav__link--anchor 
@@ -26,7 +26,7 @@
             >
           </li>
 
-          <li>
+          <li class = "nav__link">
             <a
               href=""
               class="nav__link--anchor 
@@ -36,7 +36,7 @@
             >
           </li>
 
-          <li>
+          <li class = "nav__link">
             <a href="" class="
             nav__link--anchor 
             nav__link--anchor-primary"
@@ -58,7 +58,7 @@
               />
             </figure>
             <h1 class="about-me__info--title">
-              Hello! I am <span class="text--purple"> David Greenberg </span> 👋
+              Hello! I am <span class="text--purple"> David Greenberg </span> &nbsp;<span class="wave">👋</span>
             </h1>
             <p class="about-me__info--para">
               I am a <strong class="text--purple">business student</strong> with
